# protobuf-protoc-bin

./: .gitignore  README.md  build.py  package_build.py  pyproject.toml  setup.py
.github/workflows/: build.yml  build_wheels.yml  protobuf_monitor.yml
src/protobuf_compiler/: __init__.py
src/protobuf_protoc_exe/: __init__.py
