[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "protobuf-protoc-exe"
# Versioning is done dynamically
description = "Pip package to host the protoc binary"
authors = [
    {name = "Robert Roos", email = "robert.roos@demcon.com"}
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["protobuf_protoc_exe"]

[tool.setuptools_scm]
version_file = "src/protobuf_protoc_exe/_version.py"
# Use the tag directly, without local changes:
version_scheme = "only-version"
local_scheme = "no-local-version"
